# SandalBotV2

./: .gitignore  CMakeLists.txt  README.md  SandalBotV2.sln  vcpkg.json
SandalBotV2/: BitBoardUtility.cpp  BitBoardUtility.h  Board.cpp  Board.h  BoardHistory.cpp  BoardHistory.h  BoardState.cpp  BoardState.h  Bot.cpp  Bot.h  CoordHelper.cpp  CoordHelper.h  Evaluator.cpp  Evaluator.h  FEN.cpp  FEN.h  IUCI.cpp  IUCI.h  Main.cpp  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  MoveLine.cpp  MoveLine.h  MoveOrderer.cpp  MoveOrderer.h  MovePrecomputation.cpp  MovePrecomputation.h  OpeningBook.cpp  OpeningBook.h  OptionHandler.cpp  OptionHandler.h  Piece.cpp  Piece.h  PieceEvaluations.cpp  PieceEvaluations.h  PieceList.cpp  PieceList.h  PrecomputedMagics.cpp  (+15 more)
benchmarks/: CMakeLists.txt
include/SandalBotV2/: Bitboards.h  Board.h  BoardHistory.h  BoardState.h  Bot.h  CoordHelper.h  Evaluator.h  FEN.h  IUCI.h  Init.h  Magics.h  Move.h  MoveGen.h  MoveLine.h  MoveOrderer.h  MovePrecomputation.h  OptionHandler.h  Piece.h  PieceEvaluations.h  PrecomputedMagics.h  Searcher.h  StateHistory.h  StringUtil.h  TranspositionTable.h  Types.h  ZobristHash.h
scripts/: setup_vcpkg.ps1  setup_vcpkg.sh
src/: Bitboards.cpp  Board.cpp  BoardHistory.cpp  Bot.cpp  CMakeLists.txt  CoordHelper.cpp  Evaluator.cpp  FEN.cpp  IUCI.cpp  Magics.cpp  Main.cpp  Move.cpp  MoveGen.cpp  MoveLine.cpp  MoveOrderer.cpp  MovePrecomputation.cpp  OptionHandler.cpp  Piece.cpp  PrecomputedMagics.cpp  Searcher.cpp  StateHistory.cpp  StringUtil.cpp  TranspositionTable.cpp  Types.cpp  ZobristHash.cpp
tests/: BitBoardMoveTests.cpp  CMakeLists.txt  InitGlobals.h  MoveSortingTests.cpp  MoveTests.cpp  PerftTests.cpp  PuzzleTests.cpp  TestFileReader.cpp  TestFileReader.h
tests/perft/expected/: PerftPosition1.txt  PerftPosition2.txt  PerftPosition3.txt  PerftPosition4.txt  PerftPosition5.txt  PerftPosition6.txt  PerftPosition7.txt
tests/perft/inputs/: PerftPosition1.txt  PerftPosition2.txt  PerftPosition4.txt  PerftPosition5.txt  PerftPosition6.txt  PerftPosition7.txt
tests/puzzles/expected/: EasyPuzzles.txt  HardPuzzles.txt  MediumPuzzles.txt  OtherPuzzles.txt
tests/puzzles/inputs/: EasyPuzzles.txt  HardPuzzles.txt  MediumPuzzles.txt  OtherPuzzles.txt
